# 2019_CAV_Artifact_100

./: .editorconfig  .gitignore  CAV-AE.md  LICENSE  Makefile  README.md
base-LIG/: LIG+HE.patch  LoopInvGen.Equalities.patch  LoopInvGen.Intervals.patch  LoopInvGen.Octagons.patch  LoopInvGen.Peano.patch  LoopInvGen.Polyhedra.patch  LoopInvGen.Polynomials.patch
base-LIG/LoopInvGen+HE/: loopinvgen.sh  test_all.sh
base-LIG/LoopInvGen+HE/src/: IntegerComponents.ml  Logic.ml  Synthesizer.ml
benchmarks/set_logic_LIA/NIA/2005.ICALP_PolyRank/: poly3.pos_z.sl  poly7.sl
benchmarks/set_logic_LIA/NIA/2018.CHI_InvGame/: cube2.desugared.sl  gauss_sum-more-rows.auto.sl  non-lin-ineq-1.desugared.sl  non-lin-ineq-2.desugared.sl  non-lin-ineq-3.desugared.sl  non-lin-ineq-4.desugared.sl  prod-bin.desugared.sl  s10.desugared.sl  s11.desugared.sl  s5auto.desugared.sl  s9.desugared.sl  sorin03.desugared.sl  sorin04.desugared.sl  sqrt-more-rows-swap-columns.sl
benchmarks/set_logic_LIA/NIA/2018.SV-Comp/: half_2_true-unreach-call_true-termination.sl  id_trans_false-unreach-call_true-termination.sl
benchmarks/set_logic_NIA/LIA/2005.ICALP_PolyRank/: poly1.sl  poly2.sl  poly9.sl
grammars/: Equalities.g
scripts/: compare_performance.py  compute_correlation.py  compute_plearn.py  count_rounds.sh  extract_stats.sh  plot_overfitting.py  plot_plearn.py  plot_plearn_vs_he.py
tools/compare/: Transform.opam  test_all.sh
tools/compare/scripts/: run-cvc4.sh  run-eusolver.sh  run-sketchac.sh  run-stoch.sh
tools/compare/src/: Log.ml  Transform.ml  Verify.ml  dune
(+159 files in other folders)
